--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "ecom-dashboard",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:8000/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
